feat(condo): DOMA-9722 fixed error messages

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -375,15 +375,15 @@
   "api.meter.meter.METER_RESOURCE_OWNED_BY_ANOTHER_ORGANIZATION": "This resource is owned by another organization. Please contact tech support if you want to resolve this problem",
   "api.meter.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "Meter with same account number exist in current organization in unit {unitsCsv}",
   "api.meter.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "Meter with same number and resource exist in current organization and linked with account number {accountNumbersCsv}. Please check your data.",
-  "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "Reading date ({givenDate}) can not be from the future",
-  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "The date of the meter reading ({givenDate}) must not be later than the end of the specified period for taking readings ({notifyEndDay} day of each month)",
   "api.meter.meterReading.METER_ARCHIVED": "It is not allowed to take readings on the device, which is in the archive",
-  "api.meter.meterReading.METER_VERIFICATION_MISSED": "You cannot take readings on a device that has missed the verification date",
+  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "The date of the meter reading ({givenDate}) must not be later than the end of the specified period for taking readings ({notifyEndDay} day of each month)",
+  "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "Reading date ({givenDate}) can not be from the future",
   "api.meter.meterReading.METER_READING_EXTRA_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please remove next fields: {fieldsNames}",
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please fill next fields: {fieldsNames}",
+  "api.meter.meterReading.METER_VERIFICATION_MISSED": "You cannot take readings on a device that has missed the verification date",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "The \"finish\" field can take values in the range from 1 to 31",
-  "api.meter.meterReportingPeriod.INVALID_START": "The \"start\" field can take values in the range from 1 to 31",
   "api.meter.meterReportingPeriod.INVALID_RESTRICTION_END_DAY": "The end of the restriction of taking readings can only take a value from 1 to 31",
+  "api.meter.meterReportingPeriod.INVALID_START": "The \"start\" field can take values in the range from 1 to 31",
   "api.meter.meterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Organization is required for create meter reading reporting period",
   "api.meter.meterReportingPeriod.PROPERTY_NOT_FOUND": "There is no such property in the organization",
   "api.meter.registerMetersReadings.INVALID_ACCOUNT_NUMBER": "Account number field is filled incorrectly",
@@ -478,6 +478,8 @@
   "api.user.PASSWORD_CONTAINS_EMAIL": "Password must not contain email",
   "api.user.PASSWORD_CONTAINS_PHONE": "Password must not contain phone",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "This password is weak or too obvious please choose something more secure",
+  "api.user.SMS_FOR_IP_DAY_LIMIT_REACHED": "Too many sms requests. Try again tomorrow",
+  "api.user.SMS_FOR_PHONE_DAY_LIMIT_REACHED": "Too many sms requests for this phone number. Try again tomorrow",
   "api.user.TOO_MANY_REQUESTS": "You have to wait {secondsRemaining} sec. to be able to send request again",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_EMAIL_REACHED": "Too many requests with this email. Try again later",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_PHONE_REACHED": "Too many requests with this phone. Try again later",
@@ -631,6 +633,7 @@
   "callRecord.table.column.startedAt": "Date and time",
   "callRecord.table.column.talkTime": "Talk time",
   "callRecord.table.column.ticketNumber": "Ticket number",
+  "common.consentToReceiveMarketingMaterials": "I agree to receive materials about home management, discounts and news from the Domá platform",
   "component.CookieAgreement.action.accept": "Accept",
   "component.CookieAgreement.action.expand": "Read more",
   "component.CookieAgreement.description": "DOMA LLC uses cookies to personalize services and user convenience. Cookies allow you to log in without re-entering your username and password. You can delete cookies or opt out of using them in your browser settings.",
@@ -1149,10 +1152,6 @@
   "import.meter.plural": "Meters and readings",
   "import.meter.prepositional": "Meter readings",
   "import.meter.requiredFields": "Specify address, premises and its type, personal account number, meter type, meter number, number of tariffs and date of transmission of readings",
-  "import.propertyMeter.genitive": "Property meter readings",
-  "import.propertyMeter.plural": "Property meters",
-  "import.propertyMeter.prepositional": "Property meter readings",
-  "import.propertyMeter.requiredFields": "Specify address, meter type, number of tariffs and date of transmission of the meter readings",
   "import.meterReading.plural": "Meter readings",
   "import.partlyDataLoadedModal.alert.description": "You can try to add or create a table from this data and try to download again",
   "import.partlyDataLoadedModal.alert.message": "It has become possible to add {success} of {total} {genitive}",
@@ -1163,6 +1162,10 @@
   "import.property.genitive": "Properties",
   "import.property.plural": "Properties",
   "import.property.requiredFields": "Specify the address and number of units, entrances and floors",
+  "import.propertyMeter.genitive": "Property meter readings",
+  "import.propertyMeter.plural": "Property meters",
+  "import.propertyMeter.prepositional": "Property meter readings",
+  "import.propertyMeter.requiredFields": "Specify address, meter type, number of tariffs and date of transmission of the meter readings",
   "import.successModal.buttonLabel": "Continue",
   "import.successModal.title": "Everything worked out - data downloaded",
   "import.ticket.genitive": "Tickets",
@@ -1486,6 +1489,7 @@
   "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.email.subject": "New utility bill",
   "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.push.title": "New utility bill",
   "notification.messages.BILLING_RECEIPT_FILE_ADDED.email.subject": "{data.organization}. New billing receipt",
+  "notification.messages.CANCELED_CALL_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.CUSTOMER_IMPORTANT_NOTE_TYPE.email.subject": "New organization. (SBBOL)",
   "notification.messages.CUSTOMER_IMPORTANT_NOTE_TYPE.push.title": "New organization. (SBBOL)",
   "notification.messages.CUSTOM_CONTENT_MESSAGE.email.subject": "{subject}",
@@ -1578,9 +1582,9 @@
   "notification.messages.TICKET_STATUS_RETURNED.email.subject": "Hi, it's Doma! 🦖",
   "notification.messages.TICKET_STATUS_RETURNED.push.title": "Ticket is open 💡",
   "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
-  "notification.messages.CANCELED_CALL_MESSAGE_PUSH.push.title": "{title}",
   "onboarding.tourStep.tooltip.ticket.message": "Make sure the information is correct and create an ticket",
   "onboarding.tourStep.tooltip.ticket.title": "Multiple fields filled automatically",
+  "page.auth.register.inputPhone.submit": "Continue",
   "pages.auth.AlreadyRegistered": "Already registered",
   "pages.auth.ChangePasswordTitle": "Change password",
   "pages.auth.ChangePasswordTokenErrorConfirmLabel": "Reset password",
@@ -1632,12 +1636,10 @@
   "pages.auth.register.field.Name": "Name",
   "pages.auth.register.field.Password": "Password",
   "pages.auth.register.field.Phone": "Phone",
-  "page.auth.register.inputPhone.submit": "Continue",
-  "common.consentToReceiveMarketingMaterials": "I agree to receive materials about home management, discounts and news from the Domá platform",
-  "pages.auth.register.info.dataProcessingContent": "data processing",
   "pages.auth.register.info.PersonalDataProcessingConsent": "By continuing to log in, you agree to {termsOfUse}, {privacyPolicyLink} and {consentLink}",
   "pages.auth.register.info.PrivacyPolicyContent": "privacy policy",
   "pages.auth.register.info.RecaptchaPrivacyPolicyContent": "This site is protected by reCAPTCHA and the Google {PrivacyPolicy} and {TermsOfService} apply.",
+  "pages.auth.register.info.dataProcessingContent": "data processing",
   "pages.auth.register.info.termsOfService": "Terms of Service",
   "pages.auth.register.info.termsOfUseContent": "the terms of use",
   "pages.auth.register.step.inputPhone.title": "Registration",
@@ -2148,16 +2150,16 @@
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "Finish must be greater than start",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "date of each month inclusive",
   "pages.condo.meter.reportingPeriod.create.organizationPeriod": "For all properties",
-  "pages.condo.meter.reportingPeriod.create.settings.title": "Restrictions setup",
-  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "Until the end of the period",
-  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Without restrictions",
-  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Allow to take readings",
+  "pages.condo.meter.reportingPeriod.create.organizationTooltip": "This period will apply to all properties that do not have a period with a specific address",
+  "pages.condo.meter.reportingPeriod.create.save.button": "Create period",
+  "pages.condo.meter.reportingPeriod.create.settings.alert": "Residents will receive a notification about the time limit for taking readings",
   "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "When the period ends, residents will be able to take readings, but they will see a notification that they will be taken into account next month",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Allow to take readings",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Without restrictions",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "Until the end of the period",
   "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "No readings will be accepted after the {notifyEndDay} date and until the end of the month. Residents will be able to turn them in from the 1st of next month",
   "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "With this setting, residents cannot transmit readings after the end of the period and before the beginning of the next month. You have specified a deadline that starts in one month and ends in the next, so you will not be able to set a limit.",
-  "pages.condo.meter.reportingPeriod.create.settings.alert": "Residents will receive a notification about the time limit for taking readings",
-  "pages.condo.meter.reportingPeriod.create.save.button": "Create period",
-  "pages.condo.meter.reportingPeriod.create.organizationTooltip": "This period will apply to all properties that do not have a period with a specific address",
+  "pages.condo.meter.reportingPeriod.create.settings.title": "Restrictions setup",
   "pages.condo.meter.reportingPeriod.create.start": "Beginning of period",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "The period will be permanently deleted.",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteTitle": "Delete period?",
@@ -2314,6 +2316,8 @@
   "pages.condo.property.index.TableField.UninhabitedUnitsCount": "Uninhabited units",
   "pages.condo.property.index.TableField.UnitsCount": "Flats",
   "pages.condo.property.index.UpdatePropertyTitle": "Update",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Previously, the period was selected for all houses. It can be changed in the «Meter reporting period» section after the creation of the house.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "The reading period is set up automatically — from {notifyStartDay} to {notifyEndDay}",
   "pages.condo.property.map.modal.errorLoadingContacts": "Failed to load residents",
   "pages.condo.property.map.modal.goToContacts": "To contact info",
   "pages.condo.property.map.modal.noContacts": "No residents have been added to this property in the platform yet.",
@@ -2388,8 +2392,6 @@
   "pages.condo.property.type.village": "Village",
   "pages.condo.property.unit.Name": "Name",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "It doesn't look like a house address. Check if you have specified everything correctly.",
-  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Previously, the period was selected for all houses. It can be changed in the «Meter reporting period» section after the creation of the house.",
-  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "The reading period is set up automatically — from {notifyStartDay} to {notifyEndDay}",
   "pages.condo.property.warning.modal.HelpMessage": "Unsaved information about this property will be lost if you leave this page. You can save the information or continue to edit  by closing this modal window.",
   "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Parking place names must be unique",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Property with this address has already been added to the organization",
@@ -2888,6 +2890,11 @@
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Preparing to import meter readings",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Meter readings processed: {imported} of {total}",
   "tasks.MeterReadingsImportTask.progress.title": "Import meter readings",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "File has been created",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Download",
+  "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparing for export",
+  "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Recipients exported: {exported} from {total}",
+  "tasks.NewsItemRecipientsExportTask.progress.title": "Exporting news item recipients",
   "tasks.PropertyMeterReadingsImportTask.progress.description.completed": "File has been created, please refresh the page",
   "tasks.PropertyMeterReadingsImportTask.progress.description.completed.link.label": "Download",
   "tasks.PropertyMeterReadingsImportTask.progress.description.error": "File not imported. {errorMessage}",
@@ -2895,11 +2902,6 @@
   "tasks.PropertyMeterReadingsImportTask.progress.description.preparing": "Preparing to import meter readings",
   "tasks.PropertyMeterReadingsImportTask.progress.description.processing": "Meter readings processed: {imported} of {total}",
   "tasks.PropertyMeterReadingsImportTask.progress.title": "Import property meter readings",
-  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "File has been created",
-  "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Download",
-  "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparing for export",
-  "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Recipients exported: {exported} from {total}",
-  "tasks.NewsItemRecipientsExportTask.progress.title": "Exporting news item recipients",
   "tasks.TicketDocumentGenerationTask.progress.description.completed": "File has been created",
   "tasks.TicketDocumentGenerationTask.progress.description.completed.link.label": "Download",
   "tasks.TicketDocumentGenerationTask.progress.description.processing": "Preparing for download",
