--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -375,15 +375,15 @@
   "api.meter.meter.METER_RESOURCE_OWNED_BY_ANOTHER_ORGANIZATION": "Este recurso en la dirección actual es propiedad de otro Administrador. Póngase en contacto con el servicio de asistencia para resolver este problema",
   "api.meter.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "El medidor con el mismo número de cuenta existe en la organización actual en la propiedad {unitsCsv}",
   "api.meter.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "El contador con el mismo número y recurso existe en la organización actual y está vinculado con el número de cuenta {accountNumbersCsv}",
-  "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "La fecha de lectura ({givenDate}) no puede ser del futuro",
-  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "La fecha de transmisión de la lectura ({givenDate}) no debe ser posterior al final del período de lectura especificado ({notifyEndDay} el día de cada mes)",
   "api.meter.meterReading.METER_ARCHIVED": "No se puede tomar una lectura del dispositivo que está en el archivo",
-  "api.meter.meterReading.METER_VERIFICATION_MISSED": "No se puede dar una lectura de un dispositivo que haya perdido la fecha de verificación",
+  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "La fecha de transmisión de la lectura ({givenDate}) no debe ser posterior al final del período de lectura especificado ({notifyEndDay} el día de cada mes)",
+  "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "La fecha de lectura ({givenDate}) no puede ser del futuro",
   "api.meter.meterReading.METER_READING_EXTRA_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please remove next fields: {fieldsNames}",
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please fill next fields: {fieldsNames}",
+  "api.meter.meterReading.METER_VERIFICATION_MISSED": "No se puede dar una lectura de un dispositivo que haya perdido la fecha de verificación",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "Fin de período sólo puede tener un valor entre 1 y 31",
-  "api.meter.meterReportingPeriod.INVALID_START": "El inicio del período sólo puede tener un valor entre 1 y 31",
   "api.meter.meterReportingPeriod.INVALID_RESTRICTION_END_DAY": "El final de la prohibición de testificar solo puede tener un valor de 1 a 31",
+  "api.meter.meterReportingPeriod.INVALID_START": "El inicio del período sólo puede tener un valor entre 1 y 31",
   "api.meter.meterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Se requiere una organización para crear un periodo de envío de lecturas",
   "api.meter.meterReportingPeriod.PROPERTY_NOT_FOUND": "Esta comunidad no existe en la organizacion",
   "api.meter.registerMetersReadings.INVALID_ACCOUNT_NUMBER": "Se ha especificado una cuenta personal incorrecta",
@@ -478,6 +478,8 @@
   "api.user.PASSWORD_CONTAINS_EMAIL": "La contraseña no puede ser similar al correo electrónico",
   "api.user.PASSWORD_CONTAINS_PHONE": "La contraseña no puede ser similar al número de teléfono",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "La contraseña es demasiado simple. Debería usar algo más seguro",
+  "api.user.SMS_FOR_IP_DAY_LIMIT_REACHED": "Demasiadas solicitudes de SMS. Inténtalo de nuevo mañana",
+  "api.user.SMS_FOR_PHONE_DAY_LIMIT_REACHED": "Demasiadas solicitudes de SMS para este número de teléfono. Inténtalo de nuevo mañana",
   "api.user.TOO_MANY_REQUESTS": "Espera {secondsRemaining} segundo, para volver a enviar la incidencia",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_EMAIL_REACHED": "Has creado demasiadas incidencias con este correo electrónico. Por favor, inténtalo más tarde",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_PHONE_REACHED": "Has creado demasiadas incidencias desde este teléfono. Por favor, inténtalo más tarde",
@@ -631,6 +633,7 @@
   "callRecord.table.column.startedAt": "Fecha y hora",
   "callRecord.table.column.talkTime": "Duración",
   "callRecord.table.column.ticketNumber": "Número de incidencia",
+  "common.consentToReceiveMarketingMaterials": "Acepto recibir materiales sobre gestión del hogar, descuentos y novedades de la plataforma Domá",
   "component.CookieAgreement.action.accept": "Aceptar",
   "component.CookieAgreement.action.expand": "Leer más",
   "component.CookieAgreement.description": "SRL \"Doma\" utiliza cookies para personalizar los servicios y la comodidad del usuario. Las Cookies le permiten iniciar sesión sin tener que volver a introducir su nombre de usuario y contraseña. Puede eliminar las cookies o rechazar su uso en la configuración de su navegador.",
@@ -1149,10 +1152,6 @@
   "import.meter.plural": "Metros",
   "import.meter.prepositional": "Lecturas de medidores",
   "import.meter.requiredFields": "Introduzca la dirección, la propiedad y su tipo, el número de cuenta personal, el tipo de contador, el número de tarifas y la fecha de transmisión de las lecturas",
-  "import.propertyMeter.genitive": "Lecturas de medidores de propiedades",
-  "import.propertyMeter.plural": "Metros de propiedad",
-  "import.propertyMeter.prepositional": "Lecturas de medidores de propiedades",
-  "import.propertyMeter.requiredFields": "Introduzca la dirección, el tipo de contador, el número de tarifas y la fecha de transmisión de las lecturas",
   "import.meterReading.plural": "lectura",
   "import.partlyDataLoadedModal.alert.description": "Los datos no cargados se puede añadir manualmente o generar una tabla de ellos e intentar cargarla de nuevo",
   "import.partlyDataLoadedModal.alert.message": "Se han añadido {success} de {total} {genitive}",
@@ -1163,6 +1162,10 @@
   "import.property.genitive": "Comunidades",
   "import.property.plural": "Comunidades",
   "import.property.requiredFields": "Introduzca la dirección y el número de propiedades, portales y plantas",
+  "import.propertyMeter.genitive": "Lecturas de medidores de propiedades",
+  "import.propertyMeter.plural": "Metros de propiedad",
+  "import.propertyMeter.prepositional": "Lecturas de medidores de propiedades",
+  "import.propertyMeter.requiredFields": "Introduzca la dirección, el tipo de contador, el número de tarifas y la fecha de transmisión de las lecturas",
   "import.successModal.buttonLabel": "Continuar",
   "import.successModal.title": "Datos se han cargado con éxito",
   "import.ticket.genitive": "Incidencias",
@@ -1486,6 +1489,7 @@
   "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.email.subject": "¡Nueva factura!",
   "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.push.title": "¡Nueva factura!",
   "notification.messages.BILLING_RECEIPT_FILE_ADDED.email.subject": "{data.organization}. Factura por servicios del administrador",
+  "notification.messages.CANCELED_CALL_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.CUSTOMER_IMPORTANT_NOTE_TYPE.email.subject": "Nueva organización. (Verde Business Online)",
   "notification.messages.CUSTOMER_IMPORTANT_NOTE_TYPE.push.title": "Nueva organización. (Verde Business Online)",
   "notification.messages.CUSTOM_CONTENT_MESSAGE.email.subject": "{subject}",
@@ -1578,9 +1582,9 @@
   "notification.messages.TICKET_STATUS_RETURNED.email.subject": "¡Hola, es Doma! 🦖",
   "notification.messages.TICKET_STATUS_RETURNED.push.title": "Incidencia abierta 💡",
   "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
-  "notification.messages.CANCELED_CALL_MESSAGE_PUSH.push.title": "{title}",
   "onboarding.tourStep.tooltip.ticket.message": "Asegúrate de que la información es correcta y crea una incidencia",
   "onboarding.tourStep.tooltip.ticket.title": "Varios campos se completan automáticamente",
+  "page.auth.register.inputPhone.submit": "Continuar",
   "pages.auth.AlreadyRegistered": "Ya estoy registrado",
   "pages.auth.ChangePasswordTitle": "Cambiar contraseña",
   "pages.auth.ChangePasswordTokenErrorConfirmLabel": "Recuperar la contraseña",
@@ -1632,12 +1636,10 @@
   "pages.auth.register.field.Name": "Nombre completo",
   "pages.auth.register.field.Password": "Contraseña",
   "pages.auth.register.field.Phone": "Número de teléfono",
-  "page.auth.register.inputPhone.submit": "Continuar",
-  "common.consentToReceiveMarketingMaterials": "Acepto recibir materiales sobre gestión del hogar, descuentos y novedades de la plataforma Domá",
-  "pages.auth.register.info.dataProcessingContent": "el procesamiento de datos",
   "pages.auth.register.info.PersonalDataProcessingConsent": "Al continuar con la sesión, aceptas {termsOfUse}, {privacyPolicyLink} y {consentLink}",
   "pages.auth.register.info.PrivacyPolicyContent": "la política de privacidad",
   "pages.auth.register.info.RecaptchaPrivacyPolicyContent": "Este sitio está protegido mediante reCAPTCHA y está sujeto a la {PrivacyPolicy} y a los {TermsOfService} de Google",
+  "pages.auth.register.info.dataProcessingContent": "el procesamiento de datos",
   "pages.auth.register.info.termsOfService": "servicio",
   "pages.auth.register.info.termsOfUseContent": "los términos de uso",
   "pages.auth.register.step.inputPhone.title": "Registración",
@@ -2148,16 +2150,16 @@
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "El final del período debe ser mayor que el principio del período",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "día de cada mes incluido",
   "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Para todas las comunidades",
-  "pages.condo.meter.reportingPeriod.create.settings.title": "Configuración de restricciones",
-  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "Hasta el final del período",
-  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Sin límites",
-  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Permitir lecturas de medidores",
-  "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "Cuando finalice el período, los residentes podrán tomar lecturas, pero verán un aviso de que se contabilizarán el próximo mes",
-  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "Después del día {notifyEndDay} y hasta el final del mes, no se aceptarán lecturas. Los residentes podrán entregarlos a partir del 1 del próximo mes.",
-  "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "Con esta configuración, los residentes no pueden transmitir lecturas después del final del período y hasta principios del próximo mes. Ha especificado un período de entrega que comienza en uno y termina en el próximo mes, por lo que no funcionará establecer un límite.",
-  "pages.condo.meter.reportingPeriod.create.settings.alert": "Vecinos recibirán aviso para limitar plazo de entrega de medidores",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Este período será válido para todas las casas que no tengan un período con una dirección específica",
   "pages.condo.meter.reportingPeriod.create.save.button": "Crear período",
+  "pages.condo.meter.reportingPeriod.create.settings.alert": "Vecinos recibirán aviso para limitar plazo de entrega de medidores",
+  "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "Cuando finalice el período, los residentes podrán tomar lecturas, pero verán un aviso de que se contabilizarán el próximo mes",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Permitir lecturas de medidores",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Sin límites",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "Hasta el final del período",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "Después del día {notifyEndDay} y hasta el final del mes, no se aceptarán lecturas. Los residentes podrán entregarlos a partir del 1 del próximo mes.",
+  "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "Con esta configuración, los residentes no pueden transmitir lecturas después del final del período y hasta principios del próximo mes. Ha especificado un período de entrega que comienza en uno y termina en el próximo mes, por lo que no funcionará establecer un límite.",
+  "pages.condo.meter.reportingPeriod.create.settings.title": "Configuración de restricciones",
   "pages.condo.meter.reportingPeriod.create.start": "Inicio del período",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "El período se eliminará de forma permanente.",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteTitle": "¿Eliminar período?",
@@ -2314,6 +2316,8 @@
   "pages.condo.property.index.TableField.UninhabitedUnitsCount": "Unidades no residenciales",
   "pages.condo.property.index.TableField.UnitsCount": "Pisos",
   "pages.condo.property.index.UpdatePropertyTitle": "Editar comunidad",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Anteriormente, el período fue elegido para todas las casas. Puede cambiarlo en la sección «Período de declaración» después de crear la casa.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "El período de lectura se configura automáticamente de {notifyStartDay} a {notifyEndDay} fecha",
   "pages.condo.property.map.modal.errorLoadingContacts": "No se pudo cargar a los residentes",
   "pages.condo.property.map.modal.goToContacts": "Ir a los contactos",
   "pages.condo.property.map.modal.noContacts": "A este inmueble aún no se han añadido residentes en la plataforma",
@@ -2388,8 +2392,6 @@
   "pages.condo.property.type.village": "Urbanización de chalets",
   "pages.condo.property.unit.Name": "Nombre",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "Esto no parece ser la dirección de la casa. Asegúrese de que ha introducido todo correctamente.",
-  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Anteriormente, el período fue elegido para todas las casas. Puede cambiarlo en la sección «Período de declaración» después de crear la casa.",
-  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "El período de lectura se configura automáticamente de {notifyStartDay} a {notifyEndDay} fecha",
   "pages.condo.property.warning.modal.HelpMessage": "La información de la comunidad no se guardará si abandona la página. Guarde los cambios o continúe editando la información de la comunidad cerrando este mensaje.",
   "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Los nombres de las plazas de coches deben ser únicos",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Ya se ha añadido una comunidad con esta dirección a la organización",
@@ -2888,6 +2890,11 @@
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Preparando la importación de lecturas de contadores",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Lecturas de contador procesadas: : {imported} de {total}",
   "tasks.MeterReadingsImportTask.progress.title": "Importar lecturas de contador",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "Archivo generado",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Descargar",
+  "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparando la exportación",
+  "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Registros exportados: {exported} de {total}",
+  "tasks.NewsItemRecipientsExportTask.progress.title": "Descargar destinatarios de noticias",
   "tasks.PropertyMeterReadingsImportTask.progress.description.completed": "Se ha creado el archivo, actualice la página",
   "tasks.PropertyMeterReadingsImportTask.progress.description.completed.link.label": "Descargar",
   "tasks.PropertyMeterReadingsImportTask.progress.description.error": "Archivo no importado. {errorMessage}",
@@ -2895,11 +2902,6 @@
   "tasks.PropertyMeterReadingsImportTask.progress.description.preparing": "Preparando la importación de lecturas de contadores",
   "tasks.PropertyMeterReadingsImportTask.progress.description.processing": "Lecturas de contador procesadas: : {imported} de {total}",
   "tasks.PropertyMeterReadingsImportTask.progress.title": "Importar lecturas de contador de edificio",
-  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "Archivo generado",
-  "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Descargar",
-  "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparando la exportación",
-  "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Registros exportados: {exported} de {total}",
-  "tasks.NewsItemRecipientsExportTask.progress.title": "Descargar destinatarios de noticias",
   "tasks.TicketDocumentGenerationTask.progress.description.completed": "Se ha creado el archivo",
   "tasks.TicketDocumentGenerationTask.progress.description.completed.link.label": "Descargar",
   "tasks.TicketDocumentGenerationTask.progress.description.processing": "Preparando para descarga",
