--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -375,15 +375,15 @@
   "api.meter.meter.METER_RESOURCE_OWNED_BY_ANOTHER_ORGANIZATION": "Данным ресурсом по текущему адресу владеет другая УК. Пожалуйста, обратитесь в поддержку для решения этого вопроса",
   "api.meter.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "ИПУ с таким лицевым счетом уже есть в организации в помещении {unitsCsv}",
   "api.meter.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "ИПУ с таким номером и ресурсом уже есть в организации на лицевом счете {accountNumbersCsv}. Проверьте, пожалуйста, правильность данных.",
-  "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "Дата передачи показания ({givenDate}) не должна быть больше текущей даты",
-  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "Дата передачи показания ({givenDate}) не должна быть позднее конца заданного периода для сдачи показаний ({notifyEndDay} число каждого месяца)",
   "api.meter.meterReading.METER_ARCHIVED": "Нельзя сдавать показания по прибору, который находится в архиве",
-  "api.meter.meterReading.METER_VERIFICATION_MISSED": "Нельзя сдавать показания по прибору, у которого пропущена дата поверки",
+  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "Дата передачи показания ({givenDate}) не должна быть позднее конца заданного периода для сдачи показаний ({notifyEndDay} число каждого месяца)",
+  "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "Дата передачи показания ({givenDate}) не должна быть больше текущей даты",
   "api.meter.meterReading.METER_READING_EXTRA_VALUES": "Количество тарифов в приборе учета {meterNumber}: {numberOfTariffs}, необходимо удалить значения из полей: {fieldsNames}",
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Количество тарифов в приборе учета {meterNumber}: {numberOfTariffs}, необходимо заполнить поля: {fieldsNames}",
+  "api.meter.meterReading.METER_VERIFICATION_MISSED": "Нельзя сдавать показания по прибору, у которого пропущена дата поверки",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "Конец периода может принимать значение только от 1 до 31",
-  "api.meter.meterReportingPeriod.INVALID_START": "Начало периода может принимать значение только от 1 до 31",
   "api.meter.meterReportingPeriod.INVALID_RESTRICTION_END_DAY": "Конец запрета сдачи показаний может принимать значение только от 1 до 31",
+  "api.meter.meterReportingPeriod.INVALID_START": "Начало периода может принимать значение только от 1 до 31",
   "api.meter.meterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Необходима организация для создания периода сдачи показаний",
   "api.meter.meterReportingPeriod.PROPERTY_NOT_FOUND": "В организации такого дома нет",
   "api.meter.registerMetersReadings.INVALID_ACCOUNT_NUMBER": "Указан некорректный лицевой счет",
@@ -478,6 +478,8 @@
   "api.user.PASSWORD_CONTAINS_EMAIL": "Пароль не может быть похож на email",
   "api.user.PASSWORD_CONTAINS_PHONE": "Пароль не может быть похож на телефон",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "Пароль слишком простой. Нужно использовать что-то более безопасное",
+  "api.user.SMS_FOR_IP_DAY_LIMIT_REACHED": "Слишком много смс было отправлено. Попробуйте еще раз завтра",
+  "api.user.SMS_FOR_PHONE_DAY_LIMIT_REACHED": "Слишком много смс было отправлено для этого номера телефона. Попробуйте еще раз завтра",
   "api.user.TOO_MANY_REQUESTS": "Подождите {secondsRemaining} сек., чтобы отправить запрос снова",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_EMAIL_REACHED": "С использованием вашей почты поступает очень много запросов, попробуйте позже",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_PHONE_REACHED": "С использованием вашего номера телефона поступает очень много запросов, попробуйте позже",
@@ -631,6 +633,7 @@
   "callRecord.table.column.startedAt": "Дата и время",
   "callRecord.table.column.talkTime": "Длительность",
   "callRecord.table.column.ticketNumber": "Номер заявки",
+  "common.consentToReceiveMarketingMaterials": "Согласен получать материалы об управлении домами, скидках и новостях платформы Домá",
   "component.CookieAgreement.action.accept": "Принять",
   "component.CookieAgreement.action.expand": "Подробнее",
   "component.CookieAgreement.description": "ООО \"ДОМА\" использует cookie для персонализации сервисов и удобства пользователей. Cookie обеспечивают вход без повторного ввода логина и пароля. Вы можете удалить файлы cookie или отказаться от их использования в настройках браузера.",
@@ -1149,10 +1152,6 @@
   "import.meter.plural": "Приборы",
   "import.meter.prepositional": "Показаниях ИПУ",
   "import.meter.requiredFields": "Укажите адрес, помещение и его тип, номер лицевого счета, тип счетчика, количество тарифов и дату передачи показаний",
-  "import.propertyMeter.genitive": "Показаний ОДПУ",
-  "import.propertyMeter.plural": "Приборы",
-  "import.propertyMeter.prepositional": "Показаниях ОДПУ",
-  "import.propertyMeter.requiredFields": "Укажите адрес, тип счетчика, количество тарифов и дату передачи показаний",
   "import.meterReading.plural": "Показания",
   "import.partlyDataLoadedModal.alert.description": "Незагруженные данные можно попробовать добавить вручную или сформировать из них таблицу и попробовать загрузить снова",
   "import.partlyDataLoadedModal.alert.message": "Получилось добавить {success} из {total} {genitive}",
@@ -1163,6 +1162,10 @@
   "import.property.genitive": "Домов",
   "import.property.plural": "Дома",
   "import.property.requiredFields": "Укажите адрес и количество помещений, подъездов и этажей",
+  "import.propertyMeter.genitive": "Показаний ОДПУ",
+  "import.propertyMeter.plural": "Приборы",
+  "import.propertyMeter.prepositional": "Показаниях ОДПУ",
+  "import.propertyMeter.requiredFields": "Укажите адрес, тип счетчика, количество тарифов и дату передачи показаний",
   "import.successModal.buttonLabel": "Продолжить",
   "import.successModal.title": "Все получилось — данные загружены",
   "import.ticket.genitive": "Заявок",
@@ -1486,6 +1489,7 @@
   "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.email.subject": "Вам квитанция!",
   "notification.messages.BILLING_RECEIPT_CATEGORY_AVAILABLE.push.title": "Вам квитанция!",
   "notification.messages.BILLING_RECEIPT_FILE_ADDED.email.subject": "{data.organization}. Квитанции за услуги ЖКХ",
+  "notification.messages.CANCELED_CALL_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.CUSTOMER_IMPORTANT_NOTE_TYPE.email.subject": "Новая организация. (СББОЛ)",
   "notification.messages.CUSTOMER_IMPORTANT_NOTE_TYPE.push.title": "Новая организация. (СББОЛ)",
   "notification.messages.CUSTOM_CONTENT_MESSAGE.email.subject": "{subject}",
@@ -1578,9 +1582,9 @@
   "notification.messages.TICKET_STATUS_RETURNED.email.subject": "Привет, это Doma! 🦖",
   "notification.messages.TICKET_STATUS_RETURNED.push.title": "Заявка открыта💡",
   "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
-  "notification.messages.CANCELED_CALL_MESSAGE_PUSH.push.title": "{title}",
   "onboarding.tourStep.tooltip.ticket.message": "Убедитесь, что информация верная, и создайте заявку",
   "onboarding.tourStep.tooltip.ticket.title": "Несколько полей заполнено автоматически",
+  "page.auth.register.inputPhone.submit": "Продолжить",
   "pages.auth.AlreadyRegistered": "Я уже зарегистрирован",
   "pages.auth.ChangePasswordTitle": "Изменение пароля",
   "pages.auth.ChangePasswordTokenErrorConfirmLabel": "Восстановить пароль",
@@ -1632,12 +1636,10 @@
   "pages.auth.register.field.Name": "ФИО",
   "pages.auth.register.field.Password": "Пароль",
   "pages.auth.register.field.Phone": "Телефон",
-  "page.auth.register.inputPhone.submit": "Продолжить",
-  "common.consentToReceiveMarketingMaterials": "Согласен получать материалы об управлении домами, скидках и новостях платформы Домá",
-  "pages.auth.register.info.dataProcessingContent": "обработкой данных",
   "pages.auth.register.info.PersonalDataProcessingConsent": "Продолжая авторизацию, вы соглашаетесь с {termsOfUse}, {privacyPolicyLink} и {consentLink}",
   "pages.auth.register.info.PrivacyPolicyContent": "политикой конфиденциальности",
   "pages.auth.register.info.RecaptchaPrivacyPolicyContent": "Этот сайт под защитой системы reCAPTCHA и к нему применяются {PrivacyPolicy} и {TermsOfService} Google",
+  "pages.auth.register.info.dataProcessingContent": "обработкой данных",
   "pages.auth.register.info.termsOfService": "обслуживания",
   "pages.auth.register.info.termsOfUseContent": "условиями использования",
   "pages.auth.register.step.inputPhone.title": "Зарегистрироваться",
@@ -2148,16 +2150,16 @@
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "Конец периода должен быть больше начала периода",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "числа каждого месяца включительно",
   "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Выбрать все дома",
-  "pages.condo.meter.reportingPeriod.create.settings.title": "Настройка ограничений",
-  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "До окончания периода",
-  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Без ограничений",
-  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Разрешить сдавать показания",
+  "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Этот период будет действовать для всех домов, у которых нет периода с определенным адресом",
+  "pages.condo.meter.reportingPeriod.create.save.button": "Создать период",
+  "pages.condo.meter.reportingPeriod.create.settings.alert": "Жители получат уведомление об ограничении сроков сдачи показаний",
   "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "Когда период закончится, жители смогут сдавать показания, но увидят уведомление о том, что они будут учтены в следующем месяце",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Разрешить сдавать показания",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Без ограничений",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "До окончания периода",
   "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "После {notifyEndDay} числа и до конца месяца показания не будут приниматься. Жители смогут сдать их с 1 числа следующего месяца.",
   "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "С этой настройкой жители не могут передавать показания после окончания периода и до начала следующего месяца. Вы указали период сдачи, который начинается в одном, а заканчивается в следующем месяце, поэтому установить ограничение не получится.",
-  "pages.condo.meter.reportingPeriod.create.settings.alert": "Жители получат уведомление об ограничении сроков сдачи показаний",
-  "pages.condo.meter.reportingPeriod.create.save.button": "Создать период",
-  "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Этот период будет действовать для всех домов, у которых нет периода с определенным адресом",
+  "pages.condo.meter.reportingPeriod.create.settings.title": "Настройка ограничений",
   "pages.condo.meter.reportingPeriod.create.start": "Начало периода",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "Период будет удален навсегда.",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteTitle": "Удалить период?",
@@ -2314,6 +2316,8 @@
   "pages.condo.property.index.TableField.UninhabitedUnitsCount": "Нежилых помещений",
   "pages.condo.property.index.TableField.UnitsCount": "Квартир",
   "pages.condo.property.index.UpdatePropertyTitle": "Редактирование дома",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Ранее период был выбран для всех домов. Его можно изменить в разделе «Период подачи показаний ИПУ» после создания дома.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "Период сдачи показаний настроен автоматически — с {notifyStartDay} по {notifyEndDay} число",
   "pages.condo.property.map.modal.errorLoadingContacts": "Не удалось загрузить жителей",
   "pages.condo.property.map.modal.goToContacts": "Перейти к контакту",
   "pages.condo.property.map.modal.noContacts": "В это помещение жители пока не добавлены в платформе Doma.ai",
@@ -2388,8 +2392,6 @@
   "pages.condo.property.type.village": "Коттеджный поселок",
   "pages.condo.property.unit.Name": "Название",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "Это не похоже на адрес дома. Проверьте, всё ли вы правильно указали.",
-  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Ранее период был выбран для всех домов. Его можно изменить в разделе «Период подачи показаний ИПУ» после создания дома.",
-  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "Период сдачи показаний настроен автоматически — с {notifyStartDay} по {notifyEndDay} число",
   "pages.condo.property.warning.modal.HelpMessage": "Информация о доме не сохранится, если вы уйдёте со страницы. Сохраните изменения или продолжите редактировать информацию о доме, закрыв это сообщение.",
   "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Названия машиномест должны быть уникальными",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Дом с таким адресом уже был добавлен в организацию",
@@ -2888,6 +2890,11 @@
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Подготовка к импорту",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Обработано записей: {imported} из {total}",
   "tasks.MeterReadingsImportTask.progress.title": "Импорт ИПУ",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "Файл сформирован",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Скачать",
+  "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Подготовка к экспорту",
+  "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
+  "tasks.NewsItemRecipientsExportTask.progress.title": "Выгрузка получателей новости",
   "tasks.PropertyMeterReadingsImportTask.progress.description.completed": "Файл импортирован, пожалуйста, обновите страницу",
   "tasks.PropertyMeterReadingsImportTask.progress.description.completed.link.label": "Скачать",
   "tasks.PropertyMeterReadingsImportTask.progress.description.error": "Файл не импортирован. {errorMessage}",
@@ -2895,11 +2902,6 @@
   "tasks.PropertyMeterReadingsImportTask.progress.description.preparing": "Подготовка к импорту",
   "tasks.PropertyMeterReadingsImportTask.progress.description.processing": "Обработано записей: {imported} из {total}",
   "tasks.PropertyMeterReadingsImportTask.progress.title": "Импорт ОДПУ",
-  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "Файл сформирован",
-  "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Скачать",
-  "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Подготовка к экспорту",
-  "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
-  "tasks.NewsItemRecipientsExportTask.progress.title": "Выгрузка получателей новости",
   "tasks.TicketDocumentGenerationTask.progress.description.completed": "Файл сформирован",
   "tasks.TicketDocumentGenerationTask.progress.description.completed.link.label": "Скачать",
   "tasks.TicketDocumentGenerationTask.progress.description.processing": "Подготовка к скачиванию",
