feat(condo): DOMA-11247 first commit

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2664,6 +2664,9 @@
   "pages.condo.ticket.filters.isResidentContact.true": "resident",
   "pages.condo.ticket.filters.lastCommentAt": "Last comment date",
   "pages.condo.ticket.generateDocument.completionWorks.label": "Work completion certificate",
+  "pages.condo.ticket.filters.haveComments": "Наличие комментариев",
+  "pages.condo.ticket.filters.haveCommentsFromOrganizationEmployes": "От коллег",
+  "pages.condo.ticket.filters.haveCommentsFromResident": "От жителей",
   "pages.condo.ticket.generateDocument.label": "Generate document",
   "pages.condo.ticket.generateDocument.paidWorks.label": "Work completion certificate (paid)",
   "pages.condo.ticket.id.CancelModal.cancelButtonLabel": "Cancel ticket",
