feat(condo): DOMA-9723 update invite notification banner

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2816,7 +2816,8 @@
   "pages.ticket.autoAssignment.notifications.delete.message": "Data deleted",
   "pages.ticket.autoAssignment.notifications.error.message": "Failed to load data",
   "pages.ticket.autoAssignment.notifications.save.message": "Data saved",
-  "pages.users.InviteMessageTitle": "You have an invitation to «{name}»",
+  "pages.users.InviteMessageTitle": "You are invited by the organization {name}",
+  "pages.users.InviteMessageDescription": "Would you like to accept the invitation?",
   "pages.users.InviteNewUserButtonLabel": "Invite new user",
   "pages.users.PageTitle": "Users",
   "pages.users.status.Accepted": "Invite is accepted",
