--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2816,7 +2816,8 @@
   "pages.ticket.autoAssignment.notifications.delete.message": "Datos borrados",
   "pages.ticket.autoAssignment.notifications.error.message": "Algo ha ido mal",
   "pages.ticket.autoAssignment.notifications.save.message": "Datos guardados",
-  "pages.users.InviteMessageTitle": "Ha sido invitado a la organización «{name}»",
+  "pages.users.InviteMessageTitle": "La organización {name} te invita",
+  "pages.users.InviteMessageDescription": "¿Quieres aceptar la invitación?",
   "pages.users.InviteNewUserButtonLabel": "Invitar a nuevo usuario",
   "pages.users.PageTitle": "Usuarios",
   "pages.users.status.Accepted": "Invitación acepatada",
