--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2816,7 +2816,8 @@
   "pages.ticket.autoAssignment.notifications.delete.message": "Данные удалены",
   "pages.ticket.autoAssignment.notifications.error.message": "Что-то пошло не так",
   "pages.ticket.autoAssignment.notifications.save.message": "Данные сохранены",
-  "pages.users.InviteMessageTitle": "Вас пригласили в организацию «{name}»",
+  "pages.users.InviteMessageTitle": "Вас приглашает организация {name}",
+  "pages.users.InviteMessageDescription": "Хотите принять приглашение?",
   "pages.users.InviteNewUserButtonLabel": "Пригласить нового пользователя",
   "pages.users.PageTitle": "Пользователи",
   "pages.users.status.Accepted": "Принял приглашение",
