--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -480,7 +480,7 @@
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "This password is weak or too obvious please choose something more secure",
   "api.user.SMS_FOR_IP_DAY_LIMIT_REACHED": "Too many sms requests. Try again tomorrow",
   "api.user.SMS_FOR_PHONE_DAY_LIMIT_REACHED": "Too many sms requests for this phone number. Try again tomorrow",
-  "api.user.TOO_MANY_REQUESTS": "You have to wait {secondsRemaining} sec. to be able to send request again",
+  "api.user.TOO_MANY_REQUESTS": "You have to wait {minutesRemaining} min. to be able to send request again",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_EMAIL_REACHED": "Too many requests with this email. Try again later",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_PHONE_REACHED": "Too many requests with this phone. Try again later",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_USER_REACHED": "You are sending too many requests. Try again later",
