--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -480,7 +480,7 @@
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "La contraseña es demasiado simple. Debería usar algo más seguro",
   "api.user.SMS_FOR_IP_DAY_LIMIT_REACHED": "Demasiadas solicitudes de SMS. Inténtalo de nuevo mañana",
   "api.user.SMS_FOR_PHONE_DAY_LIMIT_REACHED": "Demasiadas solicitudes de SMS para este número de teléfono. Inténtalo de nuevo mañana",
-  "api.user.TOO_MANY_REQUESTS": "Espera {secondsRemaining} segundo, para volver a enviar la incidencia",
+  "api.user.TOO_MANY_REQUESTS": "Espera {minutesRemaining} min., para volver a enviar la incidencia",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_EMAIL_REACHED": "Has creado demasiadas incidencias con este correo electrónico. Por favor, inténtalo más tarde",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_PHONE_REACHED": "Has creado demasiadas incidencias desde este teléfono. Por favor, inténtalo más tarde",
   "api.user.TOTAL_REQUEST_LIMIT_FOR_USER_REACHED": "Estás enviando demasiadas incidencias. Inténtalo de nuevo más tarde",
